# CPPSQL

L5/: CMakeLists.txt  generate.bat  main.cpp
L6/: CMakeLists.txt  main.cpp
